data/derived/comb/progs/unify/prog0171.ml.out
Characters 89-99:
  | h::t -> (h*i mod 10) :: h*i/10 + h;;
                            ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
